Fix: Wrong font color for DropDown

--- a/src/Client/Components/Form/DropDown.razor.css
+++ b/src/Client/Components/Form/DropDown.razor.css
@@ -43,6 +43,7 @@
 }
 
 .drop-down-button {
+    color: var(--black); 
     background: var(--white);
     width: 100%; 
     height: 100%;
